fixed .com|.co bug

--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -12,7 +12,7 @@
 
 common: &default_settings
   # Required license key associated with your New Relic account.
-  license_key: bef13ce8114d9b57d563b092409340f4863dc691
+  license_key: ENV["NEW_RELIC_LICENSE_KEY"]
 
   # Your application name. Renaming here affects where data displays in New
   # Relic.  For more details, see https://docs.newrelic.com/docs/apm/new-relic-apm/maintenance/renaming-applications
